endpoints added for message and chat delete, controller for chat module implemented
